# rust-pathtracer

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  showcase.md
.cargo/: config.toml
.github/workflows/: rust.yml
crates/math/: Cargo.toml
crates/math/src/: bounds.rs  lib.rs  misc.rs  point.rs  random.rs  sample.rs  spectral.rs  tangent_frame.rs  transform.rs  vec.rs
crates/math/src/color/: rgb.rs
crates/optics/: Cargo.toml
crates/optics/src/: lens_assembly.rs  lens_interface.rs  lib.rs  trace.rs
data/: config.toml  config_many_techniques.toml  config_test_blackbox.toml  config_test_candela_calibration.toml  config_test_cornell_box.toml  config_test_lighting_hdri.toml  config_test_lighting_north.toml  config_test_whitefurnace.toml  lib_curves.toml  lib_materials.toml  lib_mediums.toml  lib_meshes.toml  lib_textures.toml  raymarch_config.toml  scene.toml  test_blackbox.toml  test_config.toml  test_lighting_hdri.toml  test_lighting_north.toml  test_whitefurnace.toml
data/cameras/: brendel_tressar.txt  double_gauss_angenioux.txt  human_eye.txt  lens_baby.txt  petzval_kodak.txt  simple_2.txt  wideangle_2.txt
data/curves/: bismuth.csv  copper-werner.csv  cornell_light.csv  gold.csv  iron-johnson.csv  lead-140K.csv  platinum.csv  silver.csv
data/curves/basis/: simple-spectral-srgb-1931.csv
data/curves/csv/: CIE_TCS.csv  D65.csv  air.csv  brass_90Cu10Zn.csv  copper-mcpeak.csv  copper.csv  cornell.csv  gold.csv  illuminant_a.csv  illuminant_b.csv  illuminant_c.csv  illuminant_d50.csv  illuminant_d55.csv  illuminant_d60.csv  illuminant_d65.csv  illuminant_d75.csv  illuminant_e.csv  illuminant_fl1.csv  illuminant_fl10.csv  illuminant_fl11.csv  illuminant_fl12.csv  illuminant_fl2.csv  illuminant_fl3.csv  illuminant_fl3_1.csv  illuminant_fl3_10.csv  illuminant_fl3_11.csv  illuminant_fl3_12.csv  illuminant_fl3_13.csv  illuminant_fl3_14.csv  illuminant_fl3_15.csv  illuminant_fl3_2.csv  illuminant_fl3_3.csv  illuminant_fl3_4.csv  illuminant_fl3_5.csv  illuminant_fl3_6.csv  illuminant_fl3_7.csv  illuminant_fl3_8.csv  illuminant_fl3_9.csv  illuminant_fl4.csv  illuminant_fl5.csv  (+65 more)
data/curves/spectra/: cornell_light.spectra  fluorescent.spectra  rayleigh.spectra
data/meshes/: brilliant_diamond.mtl  monkey.mtl  prism.mtl  tower.mtl
data/scenes/: bokeh_test.toml  candela_calibration.toml  caustic_test_scene.toml  cornell_box.toml  cornell_box_diamond_arrangement.toml  cornell_box_diamond_gem.toml  cornell_box_hdri_test.toml  cornell_box_lenses.toml  cornell_box_medium.toml  cornell_box_metals_and_dielectrics.toml  cornell_box_parallel_prism.toml  cornell_box_parallel_prism_metals.toml  cornell_box_single_orb_caustic.toml  cornell_box_textured_walls.toml  hdri_test.toml  hdri_test_2.toml  metals_spectral_breakdown.toml  raymarch.toml  sun_test.toml  sun_test_2.toml  test_blackbox.toml  test_bokeh.toml  test_lighting_north.toml  test_menger.toml  test_nee_sphere.toml  test_nonuniform_scale.toml  test_prism.toml  test_rtiow_scene_2.toml  test_sampling_methods.toml  test_veach_mis.toml  tower.toml  trippy_glass_cube.toml  white_furnace.toml
data/test/: xenon_lamp.spectra
proptest-regressions/materials/: ggx.txt
src/: aabb.rs  accelerator.rs  camera.rs  config.rs  curves.rs  hittable.rs  illuminants_and_colors.rs  integrator.rs  lib.rs  main.rs  material.rs  math.rs  math_addendum.rs  parsing.rs  prelude.rs  profile.rs  props.rs  renderer.rs  texture.rs  tonemap.rs  transform.rs  vec2d.rs  world.rs
src/accelerator/: bvh.rs  lbvh.rs  mod.rs
src/camera/: mod.rs  panorama_camera.rs  projective_camera.rs  realistic_camera.rs
src/geometry/: disk.rs  hittable_list.rs  instance.rs  mesh.rs  mod.rs  rect.rs  sphere.rs  triangle.rs
src/integrator/: bdpt.rs  gpu_style.rs  lt.rs  mod.rs  pt.rs  pt_hwss.rs  utils.rs
src/integrator/bdpt/: helpers.rs  mod.rs  utils.rs
src/integrator/sppm/: mod.rs
src/material/: bxdf.rs  mod.rs  pdf.rs
src/materials/: diffuse_light.rs  ggx.rs  illuminants.rs  lambertian.rs  mod.rs  parallel_light.rs  passthrough.rs  sharp_light.rs  volumes.rs
src/math/: bounds.rs  color.rs  misc.rs  mod.rs  point.rs  random.rs  sample.rs  spectral.rs  tangent_frame.rs  transform.rs  vec.rs
src/math/color/: mod.rs  rgb.rs  xyz.rs
src/mediums/: hg.rs  mod.rs  rayleigh.rs
src/parsing/: cameras.rs  config.rs  curves.rs  environment.rs  instance.rs  material.rs  medium.rs  meshes.rs  mod.rs  primitives.rs  texture.rs  tonemap.rs
src/renderer/: film.rs  gpu_style.rs  mod.rs  naive.rs  prelude.rs  preview.rs  sppm.rs  tiled.rs  vec2d.rs
src/tonemap/: clamp.rs  mod.rs  reinhard0.rs  reinhard1.rs
src/world/: environment.rs  importance_map.rs  mod.rs
