[package]
name = "rust_pathtracer"
version = "0.2.0"
authors = ["Gillett Hernandez <gillett.hernandez@gmail.com>"]
edition = "2021"
default-run = "main"

[lints.rust]
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"

[lints.clippy]
assigning_clones = "deny"

[features]
visualize_importance_map = ["minifb"]
preview = ["minifb"]
notification = []
sort_mesh_aabb_hits = []
gui = ["eframe", "egui_extras", "egui", "egui_plot", "minifb"]
build_raymarch = ["sdfu/ultraviolet", "ultraviolet"]
color-grad = ["colorgrad"]
realistic_camera = ["rust_optics"]
default = ["realistic_camera", "build_raymarch"]


[dependencies]
anyhow = "~1.0"
crossbeam = "~0.8"
smallvec = "~1.13"
log = "~0.4"
log-once = "~0.4"
# simplelog = { git = "https://github.com/zed-industries/simplelog.rs", rev = "bd35550d556cf3498a18757608b616d53ea822d6" }
simplelog = "0.12"
exr = "~1.72"
png = "~0.17"
image = { version = "~0.25", features = ["hdr"] }
minifb = { version = "~0.26", optional = true }
nalgebra = "~0.32"
num_cpus = "~1.16"
ordered-float = "~4.2"
parking_lot = "~0.12"
pbr = "~1.1"
rand = "~0.8"
rayon = "~1.10"
serde = { version = "~1.0", features = ["derive"] }
tobj = "~4.0"
toml = "~0.8"
structopt = "~0.3"
paste = "~1.0"
eframe = { version = "~0", optional = true }
egui = { version = "~0", optional = true }
egui_plot = { version = "~0", optional = true }
egui_extras = { version = "~0", optional = true }
sdfu = { git = "https://github.com/fu5ha/sdfu", optional = true, features = [
    "ultraviolet",
] }
ultraviolet = { version = "~0.8", optional = true }
math = { git = "https://github.com/gillett-hernandez/rust_cg_math", features = [
    "serde",
] }
# math = { git = "https://github.com/gillett-hernandez/rust_cg_math", default-features = false}
rust_optics = { git = "https://github.com/gillett-hernandez/rust_optics", optional = true }
colorgrad = { version = "~0.6", optional = true }

[target.'cfg(windows)'.dependencies]
win32_notification = "~0.1"

[build-dependencies]
serde = { version = "~1.0", features = ["derive"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "clm_test"
path = "src/bin/clm_test.rs"


[[bin]]
name = "compare_exr"
path = "src/bin/compare_exr.rs"
required-features = ["color-grad"]

[[bin]]
name = "raymarch"
path = "src/bin/raymarch.rs"
required-features = ["build_raymarch"]

[[bin]]
name = "color_test"
path = "src/bin/color_test.rs"
required-features = ["gui"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[profile.dev]
opt-level = 2
panic = 'abort'
debug = true

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 1

[profile.test.build-override]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = true
lto = 'fat'
incremental = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
