[package]
name = "rust_pathtracer"
version = "0.2.0"
authors = ["Gillett Hernandez <gillett.hernandez@gmail.com>"]
edition = "2021"
default-run = "main"

[lints.rust]
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"

[lints.clippy]
assigning_clones = "deny"

[features]
build_raymarch = ["sdfu/ultraviolet", "ultraviolet"]
color_grad = ["colorgrad"]
default = ["realistic_camera", "sort_mesh_aabb_hits"]
gui = ["eframe", "egui_extras", "egui", "egui_plot", "minifb"]
notification = []
preview = ["minifb"]
realistic_camera = ["rust_optics"]
sort_mesh_aabb_hits = []
visualize_importance_map = ["minifb"]


[dependencies]
anyhow = "~1.0"
bincode = "~1.3"
colorgrad = { version = "~0.6", optional = true }
crossbeam = "~0.8"
deepsize = "~0.2"
eframe = { version = "~0", optional = true }
egui = { version = "~0", optional = true }
egui_extras = { version = "~0", optional = true }
egui_plot = { version = "~0", optional = true }
exr = "~1.72"
image = { version = "~0.25", features = ["hdr"] }
# log = "~0.4"
# log-once = "~0.4"
lazy_static = "~1.4"
math = { git = "https://github.com/gillett-hernandez/rust_cg_math", features = [
    "serde",
    "deepsize",
] }
minifb = { version = "~0.27", optional = true }
nalgebra = "~0.32"
num_cpus = "~1.16"
ordered-float = "~4.2"
parking_lot = "~0.12"
paste = "~1.0"
pbr = "~1.1"
png = "~0.17"
rand = "~0.8"
rayon = "~1.10"
rust_optics = { git = "https://github.com/gillett-hernandez/rust_optics", optional = true }
sdfu = { git = "https://github.com/fu5ha/sdfu", optional = true }
serde = { version = "~1.0", features = ["derive"] }
# simplelog = "0.12"
smallvec = "~1.13"
structopt = "~0.3"
tobj = "~4.0"
toml = "~0.8"
tracing = "~0.1"
tracing-subscriber = "~0.3"
ultraviolet = { version = "~0.8", optional = true }

[target.'cfg(windows)'.dependencies]
win32_notification = "~0.1"

[build-dependencies]
serde = { version = "~1.0", features = ["derive"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "clm_test"
path = "src/bin/clm_test.rs"


[[bin]]
name = "compare_exr"
path = "src/bin/compare_exr.rs"
required-features = ["color_grad"]

[[bin]]
name = "raymarch"
path = "src/bin/raymarch.rs"
required-features = ["build_raymarch"]

[[bin]]
name = "color_test"
path = "src/bin/color_test.rs"
required-features = ["gui"]

[[bin]]
name = "main"
path = "src/bin/main.rs"
